Update ID subtask

--- a/index.html
+++ b/index.html
@@ -404,6 +404,8 @@
                   class="border border-gray-200 rounded-lg p-1 mt-1 ml-5"
                   style="display: none"
                 >
+                  <input type="text" id="inputIdSubTask" hidden>
+                  <input type="text" id="inputParentIdSubTask" hidden>
                   <input
                     id="inputSubTaskName"
                     type="text"
